-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 9.0.0-rc0, 9.1.0-rc0
-
Component/s: Sharding, Upgrade/Downgrade
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
v9.0
-
CAR Team 2026-07-20, CAR Team 2026-08-03
-
200
-
🟦 Shard Catalog
-
None
-
None
-
None
-
None
-
None
-
None
The authoritative_metadata_on_FCV_transition.js test is not currently running on v9.0/master because of the issue described in SERVER-128742 / DEVPROD-34823.
If the test is re-enabled it is failing on this assertion, the failure started after SERVER-130698.
The problem appears to be that:
- We move a chunk from shard0 to shard1 non-auhoritatively.
- We upgrade the FCV to 9.0, this does the cloning.
- We check shard0's authoritative metadata is consistent.
- We find that shard0 historically had a chunk, so we expect the collection entry to be present.
- However starting at
SERVER-130698we only broadcast the cloning to shards that currently own chunks, so we don't find it.
This ticket should investigate/fix the issue and re-enable the test.
–
Investigation result: The test is correct and it reveals a bug where authoritative metadata cloning DDL is missing cloning to shards that historically owned chunks. The fix is done in this ticket.
- causes
-
SERVER-132058 Authoritative metadata cloning DDL may target removed shard which historically owned chunks
-
- Closed
-
- is caused by
-
SERVER-130698 setFCV makes sure that shard catalog in-memory (CSS) is aligned with disk (config.shard.*)
-
- Closed
-
- is related to
-
SERVER-128742 Catalog and Routing: Review multiversion tests fully excluded by requires_fcv_xx tag
-
- Backlog
-
-
SERVER-132548 Prevent tests in jstests/multiVersion from being fully excluded via requires_fcv_xx tags
-
- Closed
-