SERVER-131694 Authoritative metadata cloning DDL should clone to shards that only owned chunks historically (#59034)

GitOrigin-RevId: 6ef757b6098f5d17bc02b43a3294b06c9ebb080b